Colaboratory を使用して作成しました

--- a/test1.ipynb
+++ b/test1.ipynb
@@ -26,7 +26,9 @@
       },
       "source": [
         "seconds_in_a_day = 24 * 60 * 60\n",
-        "seconds_in_a_day"
+        "seconds_in_a_day\n",
+        "\n",
+        "print(\"hello\")"
       ],
       "execution_count": null,
       "outputs": [
